Fix overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
     background-color: #292929;
-    overflow: hidden;
+
 }
 
 @keyframes fade-in {
